[metadata]
name = sockschain
version = 1.0.0
author = Bjarni R. Einarsson, slight modification by Sean McFeely
author_email = bre@pagekite.net, mcfeelynaes@gmail.com
description = A python module for Chaining of Proxies
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Proxy, Proxy chains
url = https://github.com/seanmcfeely/PySocksipyChain
project_urls =
    Bug Tracker =https://github.com/seanmcfeely/PySocksipyChain/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    six

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sockschain = sockschain:main